fixing layout shifting

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,19 +4,9 @@ header{
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    max-height: 100px;
+    height: 100px;
     & img{
-        max-width: 250px;
-    }
-    & .foto{
-        width: 130px;
-        height: 130px;
-        border-radius: 50%;
-        margin-left: 2rem;
-        
-    }
-    & .logo{
-        margin-top: 1rem;
+        width: 250px;
         margin-left: 1rem;
     }
     & nav{
@@ -53,7 +43,10 @@ header{
     background-color: #051E44;
     color: #FFFFFF;
     text-align: center;
-    margin-top: -20px;
+    & h1 {
+        font-size: x-large;
+        margin: 0;
+    }
 }
 #projets{
     display: flex;
@@ -64,7 +57,7 @@ header{
     margin-top: 2rem;
     & article{
         border: 2px solid #ffffffb9;
-        width: 100%;
+        width: 95%;
         border-radius: 20px;
         padding: 1rem;
         color: #051E44;
@@ -154,18 +147,17 @@ header{
     }
 }
 #info{
-    height: 70vh;
     & #about{
         display: flex;
         max-width: 90%;
-        height: 100%;
-        margin: 1.3rem auto auto auto;
+        height: 78vh;
+        margin: auto;
         & .about-text{
             margin: auto;
             width: 50%;
             padding: 0 4rem 0 4rem;
             text-align: justify;
-            animation: infoAnimation 800ms ease-in-out;
+            animation: infoAnimation 500ms ease-in-out;
         }
         & aside{
             background: url('../assets/Alessandro_Cavaliere_foto.jpeg') no-repeat;
@@ -179,9 +171,16 @@ header{
 footer{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 5rem;
     & :nth-child(n){
         width: 50px;
-        margin: 1rem;
+        height: 50px;
+        scale: 0.9;
+        &:hover{
+            scale: 1;
+            transition: scale 200ms linear;
+        }
     }
 }
 .active{
@@ -230,6 +229,7 @@ footer{
         }
     }
     #info{
+        overflow: auto;
         & #about{
             & .about-text{
                 width: 100%;
